--- a/src/app/admin/users-list/users-list.component.html
+++ b/src/app/admin/users-list/users-list.component.html
@@ -7,10 +7,10 @@
           <h3>User Name: <span style="color: crimson;">{{item.name | titlecase}}</span></h3> 
                 </td>
         <td>
-          <h3>User Email : <span style="color: crimson;">{{item.email  | titlecase}}</span></h3>
+          <h3>User Email : <span style="color: crimson;">{{item.email  }}</span></h3>
         </td>
         <td>
-          <h3>User Phone: <span style="color: crimson;">{{item.phone | titlecase}}</span></h3>
+          <h3>User Phone: <span style="color: crimson;">{{item.phone}}</span></h3>
         </td>
         <td>
           <button id="book" style="margin-left: 1%;" (click)="makeAdmin(item.id)">Make Admin</button>
