--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -30,7 +30,7 @@
 
         </form>
     </div>
-    <footer style="color: black; margin-top: 40px;">Password - At least 1 Uppercase, At least 1 Lowercase, At least 1 Number, At least 1 Symbol (symbol allowed --> !@#$%^&*_=+-), Min 8 chars and Max 12 chars</footer> 
+    <!-- <footer style="color: black; margin-top: 40px;">Password - At least 1 Uppercase, At least 1 Lowercase, At least 1 Number, At least 1 Symbol (symbol allowed !@#$%^&*_=+-), Min 8 chars and Max 12 chars</footer>  -->
 </body>
 
 </html>
