--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -24,6 +24,7 @@
           <h3>Total Amount : <span style="color: crimson;">{{item.total | currency:'INR'}}</span></h3>
         </td>
         </tr>
+        <button id="book" (click)="delete(item.id)">Delete</button>
         </div>
   </div>
   </div>
