--- a/src/app/registration/register/register.component.css
+++ b/src/app/registration/register/register.component.css
@@ -79,3 +79,9 @@ p {
     margin: auto;
     }
 }
+@media screen and (max-width: 380px) {
+    .container{
+        margin: auto;
+        width: 300px;
+        } 
+}
