--- a/src/app/admin/add-cinema/add-cinema.component.html
+++ b/src/app/admin/add-cinema/add-cinema.component.html
@@ -1,6 +1,7 @@
 <h3 style="text-align:center ;margin-bottom: 1%;margin-top: 1%;">Theaters List</h3>
     <fieldset>
     <select id="top" style="width: 50%;margin-left: 25%;" (change)="result(cine.value)" #cine>
+      <option></option>
   <option *ngFor="let box of cinema">{{box | titlecase}}</option>
 
 </select>
