--- a/src/app/front-page/front-page.component.css
+++ b/src/app/front-page/front-page.component.css
@@ -95,3 +95,20 @@ tr{
         margin-bottom: 20%;
       }
   } 
+  @media screen and (max-width: 380px) {
+    footer {
+      display: block;
+    }
+    table{
+        margin: auto;
+    }
+    tr{
+        text-align: center;
+    }
+    .sub-main{
+        width: 30%;
+        margin: 25%;
+        margin-top: 20%;
+        margin-bottom: 20%;
+      }
+  } 
