--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -69,3 +69,9 @@ h3{
     background-color:salmon;
     border: 2px solid crimson !important;
 }
+@media screen and (max-width: 380px) {
+    .container{
+        margin: auto;
+        width: 300px;
+        } 
+}
