--- a/src/app/record/record.component.css
+++ b/src/app/record/record.component.css
@@ -45,9 +45,10 @@
   
   .container {
     padding: 2px 16px;
+    
   }
  td{
-   width: 350px;
+   width: 380px;
  }
   .column {
     width:90%;
@@ -55,6 +56,7 @@
     margin-bottom: 10px;
     margin-left: 4%;
     margin-top: 10px;
+    text-align: center;
   }
   
   .row {margin: 0 -5px;}
@@ -66,7 +68,21 @@
     clear: both;
   }
   
-  
+  #book{
+    margin-bottom: 1%;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 14px 24px;
+  border: none;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+  background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
+  color: #fff;
+  }
 
   * {
     box-sizing: border-box;
