--- a/src/app/registration/register/register.component.html
+++ b/src/app/registration/register/register.component.html
@@ -27,11 +27,10 @@
             <div class="btns">
                 <button type="submit" (click)="register(name.value,email.value,password.value,phone.value)">Register</button>
             </div>
-
         </form>
     </div>
 
-    <footer style="color: black; margin-top: 40px;">Password - At least 1 Uppercase, At least 1 Lowercase, At least 1 Number, At least 1 Symbol (symbol allowed --> !@#$%^&*_=+-), Min 8 chars and Max 12 chars</footer> 
+    <!-- <footer style="color: black; margin-top: 40px;">Password - At least 1 Uppercase, At least 1 Lowercase, At least 1 Number, At least 1 Symbol (symbol allowed !@#$%^&*_=+-), Min 8 chars and Max 12 chars</footer>  -->
 </body>
 
 </html>
