loading geature added

--- a/src/app/admin/movies-list/movies-list.component.html
+++ b/src/app/admin/movies-list/movies-list.component.html
@@ -19,7 +19,7 @@
   </div>
 </div>
  -->
-
+ <div class="loader"  *ngIf="!list;"></div>
   <div class="row">
     <div class="column" *ngFor="let item of list">
       <div class="card">
