--- a/src/app/admin/user-reservation/user-reservation.component.html
+++ b/src/app/admin/user-reservation/user-reservation.component.html
@@ -1,3 +1,4 @@
+<div class="loader"  *ngIf="!list;"></div>
 <div class="row" *ngIf="list.length>0;">
     <div class="column" *ngFor="let item of list" >
       <div class="card">
