--- a/src/app/details/cinema-detail/cinema-detail.component.html
+++ b/src/app/details/cinema-detail/cinema-detail.component.html
@@ -1,6 +1,6 @@
 
 <h1>Cinema Details</h1>
-
+<div class="loader"  *ngIf="!cinemaInformation"></div>
 
 <div class="row" *ngIf="cinemaInformation">
    <div class="column" >
