--- a/src/app/details/movie-detail/movie-detail.component.html
+++ b/src/app/details/movie-detail/movie-detail.component.html
@@ -1,5 +1,5 @@
 <h1>Movie Details</h1>
-
+<div class="loader"  *ngIf="!movieInformation"></div>
 <div class="row" *ngIf="movieInformation">
     <div class="column" >
       <div class="card">
