--- a/src/app/movie-collection/movie-collection.component.html
+++ b/src/app/movie-collection/movie-collection.component.html
@@ -1,4 +1,4 @@
-
+<div class="loader"  *ngIf="!movies;"></div>
 <div class="row" *ngIf="movies" >
   <div class="column" *ngFor="let movie of movies">
 <div class="flip-card">
