--- a/src/app/reservation/reservation.component.css
+++ b/src/app/reservation/reservation.component.css
@@ -238,7 +238,9 @@ body {
     background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
     color: #fff;
     }
-
+    #book:hover {
+      background:orangered;
+  }
     
 @media screen and (max-width: 700px) {
   #price{
