--- a/src/app/admin/users-list/users-list.component.html
+++ b/src/app/admin/users-list/users-list.component.html
@@ -1,4 +1,5 @@
 <h1 style="text-align: center;">User Lists</h1>
+<div class="loader"  *ngIf="!list;"></div>
 <div class="row" *ngIf="list.length>0; else elseblock">
     <div class="column" *ngFor="let item of list" >
       <div class="card">
