--- a/src/app/details/booking-details/booking-details.component.css
+++ b/src/app/details/booking-details/booking-details.component.css
@@ -71,6 +71,34 @@
   background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
   color: #fff;
   }
+  #book:hover {
+    background:orangered;}
+
+    .loader {
+      border: 16px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 16px solid #3498db;
+      width: 120px;
+      height: 120px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+      position: absolute;
+      top: 50%;
+      left: 45%;
+      margin: -25px 0 0 -25px;
+    }
+    
+    /* Safari */
+    @-webkit-keyframes spin {
+      0% { -webkit-transform: rotate(0deg); }
+      100% { -webkit-transform: rotate(360deg); }
+    }
+    
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
   @media screen and (max-width: 600px) {
     .column {
       width: 100%;
@@ -105,5 +133,16 @@
       padding: 2px 0;
   
   
+    }
+  }
+  @media print {
+    h1{
+      display:none;
+    }
+    .card{
+      box-shadow: none;
+    }
+    #book{
+      display: none;
     }
   }
