--- a/src/app/details/movie-detail/movie-detail.component.css
+++ b/src/app/details/movie-detail/movie-detail.component.css
@@ -41,7 +41,19 @@
     display: table;
     clear: both;
   }
-  
+  .loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    margin: -25px 0 0 -25px;
+  }
   
   @media screen and (max-width: 800px) {
     .column {
