--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -163,7 +163,9 @@ transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transfo
 background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
 color: #fff;
 }
-
+#book:hover {
+  background:orangered;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -225,6 +227,30 @@ body {
   display: table;
   clear: both;
 }
+
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 70px;
+  height: 70px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  margin-left: 40%;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 
 @media screen and (max-width: 700px) {
