--- a/src/app/movie-collection/movie-collection.component.css
+++ b/src/app/movie-collection/movie-collection.component.css
@@ -85,7 +85,8 @@ form.example input[type=text] ,form.example input[type=date]{
     margin-left: 5%;
   }
   
-  .row {margin: 0 -5px;}
+  .row {
+    margin: auto}
   
   
   .row:after {
@@ -119,12 +120,41 @@ form.example input[type=text] ,form.example input[type=date]{
     background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
     color: #fff;
     }
+    #book:hover {
+      background:orangered;
+  }
+    .loader {
+      border: 16px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 16px solid #3498db;
+      width: 70px;
+      height: 70px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+      position: absolute;
+      top: 50%;
+      left: 45%;
+      margin: -25px 0 0 -25px;
+    }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
   @media screen and (max-width: 900px) {
     .column {
-      width: 90%;
+      padding: 10%;
       display: block;
-      margin-left: 15%;
-      margin-bottom: 10%;
+    }
+    .loader{
+      top:70%;
     }
   } 
   
@@ -146,9 +176,7 @@ form.example input[type=text] ,form.example input[type=date]{
 
   @media screen and (max-width: 380px) {
     .column {
-      width: 70%;
+      padding: 10%;
       display: block;
-      margin-left: 10%;
-      margin-bottom: 10%;
     }
 }
