--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -1,4 +1,4 @@
-
+<div class="loader"  *ngIf="!list;"></div>
 <div class="row" *ngIf="list.length>0; else elseblock">
     <div class="column" *ngFor="let item of list" >
       <div class="card">
