--- a/src/app/admin/edit-theaters/edit-theaters.component.html
+++ b/src/app/admin/edit-theaters/edit-theaters.component.html
@@ -1,25 +1,26 @@
+<fieldset></fieldset>
 <div class="container">  
-    <form id="contact" >
+    <form id="contact" #userForm="ngForm">
       <h3>Edit Cinema</h3>
       <h5>Theater Name:</h5>
       <fieldset>
-        <input value="{{item.name}}" placeholder="Name of Theater" type="text" tabindex="1" required autofocus #name>
+        <input  placeholder="Name of Theater" type="text" tabindex="1" required autofocus #name  name="theatername" [(ngModel)]="theatername" [class.invalid]="!userForm.form.controls['theatername']?.valid && userForm.form.controls['theatername']?.touched">
       </fieldset>
       <h5>City:</h5>
       <fieldset>
-        <input value="{{item.city}}" placeholder="Location of Theater" type="text" tabindex="2" required #city>
+        <input  placeholder="Location of Theater" type="text" tabindex="2" required #city name="cityname" [(ngModel)]="cityname" [class.invalid]="!userForm.form.controls['cityname']?.valid && userForm.form.controls['cityname']?.touched">
       </fieldset>
       <h5>Ticket Price:</h5>
       <fieldset>
-        <input value="{{item.ticketPrice}}" placeholder="Ticket Price in Rupees" type="number" tabindex="2" required #ticketPrice>
+        <input  min="1" placeholder="Ticket Price in Rupees" type="number" tabindex="2" required #ticketPrice name="ticket" [(ngModel)]="ticket" [class.invalid]="!userForm.form.controls['ticket']?.valid && userForm.form.controls['ticket']?.touched">
       </fieldset>
       <h5>Row Values:</h5>
       <fieldset>
-        <input value="{{item.rows}}" placeholder="Row values in alphabet" type="text" tabindex="2" required #rows> 
+        <input  placeholder="Row values in alphabet" type="text" tabindex="2" required #rows  name="noofrows" [(ngModel)]="noofrows" [class.invalid]="!userForm.form.controls['noofrows']?.valid && userForm.form.controls['noofrows']?.touched"> 
       </fieldset>
       <h5>Column Values:</h5>
       <fieldset>
-        <input value="{{item.columns}}" placeholder="Column values in number" type="text" tabindex="2" required #columns> 
+        <input  placeholder="Column values in number" type="text" tabindex="2" required #columns name="noofcolumns" [(ngModel)]="noofcolumns" [class.invalid]="!userForm.form.controls['noofcolumns']?.valid && userForm.form.controls['noofcolumns']?.touched"> 
       </fieldset>
       <h5>Movie:</h5>
       <fieldset>
@@ -31,15 +32,15 @@
       </fieldset>
       <h5>Show Time:</h5>
       <fieldset>
-        <input value="{{item.startAt}}" placeholder="Show Start time" type="text" tabindex="3" required #startAt>
+        <input placeholder="Show Start time" type="text" tabindex="3" required #startAt name="showtime" [(ngModel)]="showtime" [class.invalid]="!userForm.form.controls['showtime']?.valid && userForm.form.controls['showtime']?.touched">
       </fieldset>
       <h5>Show Date:</h5>
       <fieldset>
-        <input value="{{item.date | date:'yyyy-MM-dd'}}" placeholder="Show Date of Movie" type="date" tabindex="3" required #date>
+        <input  placeholder="Show Date of Movie" type="date" tabindex="3" required #date  name="showdate" [(ngModel)]="showdate" [class.invalid]="!userForm.form.controls['showdate']?.valid && userForm.form.controls['showdate']?.touched">
       </fieldset>
       <h5>Image Url:</h5>
       <fieldset>
-        <input value="{{item.image}}" placeholder="Imaage Url of Theater" type="url" tabindex="4" required #image>
+        <input  placeholder="Imaage Url of Theater" type="url" tabindex="4" required #image name="imageurl" [(ngModel)]="imageurl" [class.invalid]="!userForm.form.controls['imageurl']?.valid && userForm.form.controls['imageurl']?.touched">
       </fieldset>
 
       <fieldset>
