--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -3,9 +3,11 @@
 [images]="imgCollection" [infinite]="true" [autoSlide]="4" [animationSpeed]="3"></ng-image-slider>
 
 <div class="center">
+    <h1 style="margin-bottom: 2%;color: crimson;">"MovieDom Welcomes You"</h1>
 <div class="sub-main">
     <button (click)="home()" class="button-three">Grab Seats</button>
   </div>
+  <h1 style="margin-top: 2%;color: crimson;">"Watch handpicked cinema, curated with love"</h1>
 </div>
 
 
