--- a/src/app/admin/movies-list/movies-list.component.css
+++ b/src/app/admin/movies-list/movies-list.component.css
@@ -108,14 +108,14 @@
     .loader {
       border: 16px solid #f3f3f3;
       border-radius: 50%;
-      border-top: 16px solid #3498db;
+      border-top: 16px solid lightcoral;
       width: 70px;
       height: 70px;
       -webkit-animation: spin 2s linear infinite; /* Safari */
       animation: spin 2s linear infinite;
       position: absolute;
-      top: 50%;
-      left: 45%;
+      top: 47%;
+      left: 48%;
       margin: -25px 0 0 -25px;
     }
   
@@ -131,19 +131,24 @@
   }
   
   @media screen and (max-width: 700px) {
+    .loader{
+      top:90%
+    }
     .column {
       width: 87%;
       display: block;
       margin-bottom: 20px;
     }
     .loader{
-      top:70%;
+      top:87%
     }
   } 
   
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    border-radius: 20px;
+    background-color: #f0ffff;
   }
   
   .card:hover {
@@ -154,5 +159,8 @@
     padding: 2px 16px;
   }
   img{
+    margin-top: 3%;
     height: 350px;
+    border-radius: 10px;
+    border: 3px solid black;
   }
