--- a/src/app/admin/theaters/theaters.component.css
+++ b/src/app/admin/theaters/theaters.component.css
@@ -94,6 +94,45 @@
     background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
     color: #fff;
     } */
+
+    .example{
+      display: flex;
+    }
+    .ng-autocomplete{
+      margin-top: 1.5%;
+      font-size: 15px;
+    }
+    form.example input[type=text] {
+      padding: 7px;
+      font-size: 15px;
+      border: 1px solid grey;
+      float: left;
+      width: 80%;
+      background: #f1f1f1;
+    }
+    
+    form.example button {
+      margin-top: 1.5%;
+      float: left;
+      width: 15%;
+      padding: 8px;
+      background: #2196F3;
+      color: white;
+      font-size: 17px;
+      border: 1px solid grey;
+      border-left: none;
+      cursor: pointer;
+    }
+    
+    form.example button:hover {
+      background: #0b7dda;
+    }
+    
+    form.example::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
     span{
       color: dodgerblue;
     }
@@ -140,14 +179,14 @@
     .loader {
       border: 16px solid #f3f3f3;
       border-radius: 50%;
-      border-top: 16px solid #3498db;
+      border-top: 16px solid lightcoral;
       width: 70px;
       height: 70px;
       -webkit-animation: spin 2s linear infinite; /* Safari */
       animation: spin 2s linear infinite;
       position: absolute;
-      top: 50%;
-      left: 45%;
+      top: 47%;
+      left: 48%;
       margin: -25px 0 0 -25px;
     }
   
@@ -162,19 +201,22 @@
     100% { transform: rotate(360deg); }
   }
     @media screen and (max-width: 700px) {
+      .loader{
+        top:87%
+      }
       .column {
         width: 87%;
         display: block;
         margin-bottom: 20px;
       }
-      .loader{
-        top:70%;
-      }
+
     } 
     
     .card {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
+      border-radius: 20px;
+      background-color:#f0ffff;
     }
     
     .card:hover {
@@ -185,5 +227,8 @@
       padding: 2px 16px;
     }
     img{
-      height: 280px;
+      margin-top: 3%;
+      height: 300px;
+      border-radius: 10px;
+      border: 3px solid black;
     }
