--- a/src/app/admin/user-reservation/user-reservation.component.css
+++ b/src/app/admin/user-reservation/user-reservation.component.css
@@ -8,6 +8,9 @@ body{
     transition: 0.3s;
     padding: 2px 16px;
     text-align: center;
+    background-color: mintcream;
+    border: 2px solid black;
+    border-radius: 20px;
   }
   
   .card:hover {
@@ -23,9 +26,9 @@ body{
   .column {
     width:93%;
     padding: 0 2px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     margin-left: 3%;
-    margin-top: 10px;
+    margin-top: 25px;
   }
   
   .row {margin: 0 -5px;}
@@ -65,14 +68,14 @@ body{
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
+  border-top: 16px solid lightcoral;
+  width: 100px;
+  height: 100px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
   position: absolute;
-  top: 50%;
-  left: 45%;
+  top: 47%;
+  left: 48%;
   margin: -25px 0 0 -25px;
 }
 /* Safari */
@@ -84,4 +87,9 @@ body{
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+@media screen and (max-width: 700px) {
+  .loader{
+    top:87%
+  }
 }
