--- a/src/app/details/booking-details/booking-details.component.html
+++ b/src/app/details/booking-details/booking-details.component.html
@@ -1,4 +1,4 @@
-<h1>Booking Details</h1>
+<h1 style="text-align:center ;">Booking Details</h1>
 <div class="loader"  *ngIf="!bookinfo"></div>
 <div class="row" *ngIf="bookinfo" >
     <div class="column" >
