--- a/src/app/details/cinema-detail/cinema-detail.component.css
+++ b/src/app/details/cinema-detail/cinema-detail.component.css
@@ -41,14 +41,14 @@
   .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid lightcoral;
     width: 120px;
     height: 120px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
     position: absolute;
-    top: 50%;
-    left: 45%;
+    top: 47%;
+    left: 48%;
     margin: -25px 0 0 -25px;
   }
   
@@ -64,6 +64,8 @@
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    border-radius: 20px;
+    background-color: #f0ffff;
   }
   
   .card:hover {
@@ -74,7 +76,10 @@
     padding: 2px 16px;
   }
   img{
-    height: 300px;
+    margin-top: 3%;
+    height: 350px;
+    border-radius: 10px;
+    border: 3px solid black;
   }
 
   span{
