--- a/src/app/details/movie-detail/movie-detail.component.css
+++ b/src/app/details/movie-detail/movie-detail.component.css
@@ -7,6 +7,7 @@
   body {
     font-family: Arial, Helvetica, sans-serif;
   }
+
   #movie td, #movie th {
     border: 1px solid #ddd;
     padding: 8px;
@@ -44,14 +45,14 @@
   .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid lightcoral;
     width: 120px;
     height: 120px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
     position: absolute;
-    top: 50%;
-    left: 45%;
+    top: 47%;
+    left: 48%;
     margin: -25px 0 0 -25px;
   }
   
@@ -67,6 +68,8 @@
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    border-radius: 20px;
+    background-color:#f0ffff ;
   }
   
   .card:hover {
@@ -77,7 +80,10 @@
     padding: 2px 16px;
   }
   img{
-    height: 300px;
+    margin-top: 3%;
+    height: 350px;
+    border-radius: 10px;
+    border: 3px solid black;
   }
 
   span{
