--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -100,7 +100,10 @@ padding-right: 1%;
 } */
 
 /*Resize the wrap to see the search bar change!*/
-
+table{
+  margin: auto;
+  width: 100%;
+}
 
 .wrap{
   width: 50%;
@@ -137,18 +140,51 @@ left: 50%;
   background-color: lightcoral;
   color: white;
 }
-a{
-  text-decoration:underline;
+.anime {
+  position:relative;
+  text-decoration: none;
   color: dodgerblue;
+   transition:color .15s ease-in-out;
 }
-a:hover{
-  color: crimson;
+
+.anime:hover {
+  background-size: 100% 100%;
   cursor: pointer;
+}
+
+.anime:after {
+  display:block;
+  content:"";
+  position: absolute;
+   right:0;
+   left:0;
+   width:100%;
+  height:3px;
+   opacity:0;
+  transform:translateY(-150%);
+   transition:transform .15s ease-in-out, opacity .15s ease-in-out;
+   background-color: crimson;
+}
+
+.anime.is-active,
+.anime:active,
+.anime:focus,
+.anime:hover {
+   color: crimson;
+}
+
+.anime.is-active:after,
+.anime:active:after,
+.anime:focus:after,
+.anime:hover:after {
+   transform:translateY(0);
+   opacity:1;
 }
 span{
   color: dodgerblue;
 }
 #book{
+  margin-top: 8%;
   margin-bottom: 3%;
 display: inline-block;
 outline: none;
@@ -158,7 +194,7 @@ line-height: 20px;
 font-weight: 600;
 border-radius: 8px;
 padding: 14px 24px;
-border: none;
+border:none;
 transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
 background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
 color: #fff;
@@ -213,12 +249,17 @@ body {
 */
 .column {
   float: left;
+  height: 650px;
   width:27%;
   padding: 0 2px;
-  margin-bottom: 20px;
   margin-left: 4.5%;
 }
-
+table{
+  text-align: center;
+}
+td{
+  text-align: center;
+}
 .row {margin: 0 -5px;}
 
 
@@ -228,16 +269,22 @@ body {
   clear: both;
 }
 
-
+h3{
+  padding: 0;
+  margin: 0;
+}
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid lightcoral;
   width: 70px;
-  height: 70px;
+    height: 70px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
-  margin-left: 40%;
+  position: absolute;
+  top: 47%;
+  left: 48%;
+  margin: -25px 0 0 -25px;
 }
 
 /* Safari */
@@ -254,16 +301,24 @@ body {
 
 
 @media screen and (max-width: 700px) {
+  .loader{
+    top:87%
+  }
   .column {
     width: 90%;
     display: block;
     margin-bottom: 20px;
+  }
+  table{
+    margin: auto;
   }
 } 
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  border-radius: 20px;
+  background-color:#f0ffff;
 }
 
 .card:hover {
@@ -274,5 +329,8 @@ body {
   padding: 2px 16px;
 }
 img{
-  height: 350px;
+  margin-top: 3%;
+  height: 300px;
+  border-radius: 20px;
+  border: 3px solid black;
 }
