--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
 <div>
-  <form autocomplete=off class="example" action="/action_page.php" style="margin:auto; width: 80%;">
+  <form autocomplete=off class="example"  style="margin:auto; width: 80%;">
       <!-- <input type="text" placeholder="Enter City" name="search2" style="margin-right:1%" #sch > -->
       <div class="ng-autocomplete" style="width: 80%; margin-right:1%" >
-        <ng-autocomplete  [data]="data" [searchKeyword]="keyword" (selected)='selectEvent($event)' placeholder="Enter City"
+        <ng-autocomplete  [data]="data" [searchKeyword]="keyword" (selected)='selectEvent($event)' placeholder="Search City"
             (inputChanged)='onChangeSearch($event)' (inputFocused)='onFocused($event)' [itemTemplate]="itemTemplate"
             [notFoundTemplate]="notFoundTemplate" #sch>
         </ng-autocomplete>
@@ -23,18 +23,44 @@
   </div>
 
 
-  <!-- <div class="loader"  *ngIf="!cinemas.length;"></div> -->
+  <div class="loader"  *ngIf="!cinemas;"></div>
 
 <div class="row" *ngIf="cinemas.length>0; else elseblock">
   <div class="column" *ngFor="let cinema of cinemas">
     <div class="card">
-      <img src={{cinema.image}} alt="Avatar" style="width:100%">
       <div class="container" style="text-align: center;">
-        <h1><a  (click)="cinemaDetail(cinema.theaterId)" >{{ cinema.theaterName| titlecase}}</a></h1> 
-        <h3>Movie Name: <a (click)="movieDetail(cinema.movieId)" >{{ cinema.movieName | titlecase}}</a></h3> 
-        <h3>Show Time : <span>{{cinema.startAt}}</span></h3>
-        <h3>Available Seats: <span>{{cinema.seatsAvailability}}</span></h3>
-        <h3>Location: <span>{{cinema.city | titlecase}}</span></h3>
+        <img src={{cinema.image}} alt="Avatar" style="width:100%">
+        <h1><a class="anime" (click)="cinemaDetail(cinema.theaterId)" >{{ cinema.theaterName| titlecase}}</a></h1> 
+        <table>
+          <tr>
+        <td >
+         <h3 >Movie Name</h3>
+      </td >
+      <td ><h3 >Show Time</h3></td>
+    </tr>
+    <tr >
+       <td>
+        <h3> <a class="anime"(click)="movieDetail(cinema.movieId)" >{{ cinema.movieName | titlecase}}</a></h3>
+        </td>
+        <td >
+           <h3 > <span>{{cinema.startAt}}</span></h3>
+        </td>
+      </tr>
+      <tr >
+        <td >
+         <h3 style="margin-top: 30px;">Availablity</h3>
+      </td >
+      <td ><h3 style="margin-top: 30px;">Location </h3></td>
+    </tr>
+    <tr>
+       <td >
+        <h3> <span style="color: crimson;">{{cinema.seatsAvailability}}</span></h3>
+        </td>
+        <td >
+           <h3 > <span>{{cinema.city | titlecase}}</span></h3>
+        </td>
+      </tr>
+      </table>
         <button id="book" (click)="reserve(cinema.theaterId,cinema.seatsAvailability,cinema.ticketPrice,cinema.rows,cinema.columns)">Book</button>
       </div>
     </div>
