--- a/src/app/movie-collection/movie-collection.component.css
+++ b/src/app/movie-collection/movie-collection.component.css
@@ -1,6 +1,7 @@
 *{
     margin-top: 1%;
 }
+
 .example{
     display: flex;
   }
@@ -40,6 +41,7 @@ form.example input[type=text] ,form.example input[type=date]{
   width: 300px;
   height: 300px;
   perspective: 1000px;
+
 }
 
 .flip-card-inner {
@@ -65,12 +67,14 @@ form.example input[type=text] ,form.example input[type=date]{
 }
 
 .flip-card-front {
-  background-color: #bbb;
+  background-color: transparent;
   color: black;
+
 }
 
 .flip-card-back {
   background-color: #2980b9;
+  border: 3px solid black;
   color: white;
   transform: rotateY(180deg);
 }
@@ -97,13 +101,45 @@ form.example input[type=text] ,form.example input[type=date]{
   h1{
       margin-top: 15%;
   }
-  a{
-    text-decoration:underline;
-    color: linen;
+ a {
+    position:relative;
+    text-decoration: none;
+    color: white;
+     transition:color .15s ease-in-out;
   }
-  a:hover{
-    color: crimson;
+  
+  a:hover {
+    background-size: 100% 100%;
     cursor: pointer;
+  }
+  
+  a:after {
+    display:block;
+    content:"";
+    position: absolute;
+     right:0;
+     left:0;
+     width:100%;
+    height:3px;
+     opacity:0;
+    transform:translateY(-150%);
+     transition:transform .15s ease-in-out, opacity .15s ease-in-out;
+     background-color: orangered;
+  }
+  
+  a.is-active,
+  a:active,
+  a:focus,
+  a:hover {
+     color: orangered;
+  }
+  
+  a.is-active:after,
+  a:active:after,
+  a:focus:after,
+  a:hover:after {
+     transform:translateY(0);
+     opacity:1;
   }
   #book{
     display: inline-block;
@@ -126,14 +162,14 @@ form.example input[type=text] ,form.example input[type=date]{
     .loader {
       border: 16px solid #f3f3f3;
       border-radius: 50%;
-      border-top: 16px solid #3498db;
+      border-top: 16px solid lightcoral;
       width: 70px;
       height: 70px;
       -webkit-animation: spin 2s linear infinite; /* Safari */
       animation: spin 2s linear infinite;
       position: absolute;
-      top: 50%;
-      left: 45%;
+      top: 47%;
+      left: 48%;
       margin: -25px 0 0 -25px;
     }
   
@@ -154,7 +190,7 @@ form.example input[type=text] ,form.example input[type=date]{
       display: block;
     }
     .loader{
-      top:70%;
+      top:87%
     }
   } 
   
@@ -175,6 +211,9 @@ form.example input[type=text] ,form.example input[type=date]{
   }
 
   @media screen and (max-width: 380px) {
+    .loader{
+      top:100%;
+    }
     .column {
       padding: 10%;
       display: block;
