--- a/src/app/record/record.component.css
+++ b/src/app/record/record.component.css
@@ -37,6 +37,9 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 2px 16px;
+    border-radius: 20px;
+    background-color:mintcream;
+    border: 2px solid black;
   }
   
   .card:hover {
@@ -53,8 +56,8 @@
   .column {
     width:90%;
     padding: 0 2px;
-    margin-bottom: 10px;
-    margin-left: 4%;
+    margin-bottom: 25px;
+    margin-left: 5%;
     margin-top: 10px;
     text-align: center;
   }
@@ -93,17 +96,26 @@
   .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid lightcoral;
     width: 100px;
       height: 100px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
     position: absolute;
-    top: 50%;
-    left: 45%;
+    top: 47%;
+    left: 48%;
     margin: -25px 0 0 -25px;
   }
-  
+  .head{
+    display: flex;
+    justify-content: space-between;
+  }
+  #top{
+    margin-left:1%;
+  }
+  #left{
+    margin-right:1% ;
+  }
   /* Safari */
   @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
@@ -116,6 +128,15 @@
   }
   @media screen and (max-width: 900px) {
     .loader{
-      top:70%;
+      top:87%
+    }
+    .head{
+      display: block;
+    }
+    #top{
+      margin-left:1%;
+    }
+    #left{
+      margin-left:1% ;
     }
   } 
