--- a/src/app/registration/login/login.component.css
+++ b/src/app/registration/login/login.component.css
@@ -6,7 +6,7 @@ body{
     color: white;
     padding-top: 16vh;
 
-    padding-bottom:19vh;
+    padding-bottom:22vh;
     background-image: url("https://t3.ftcdn.net/jpg/02/55/67/62/360_F_255676210_fiOrmx7LosKnQrtNrWPllUrunUkqTuCy.jpg");
     background-color: black;
     background-repeat:no-repeat;
@@ -61,8 +61,19 @@ button{
 button:hover{
     background-color:darkblue;
 }
-
-
+.invalid{
+    background-color:salmon;
+    border: 2px solid crimson !important;
+}
+span{
+    text-align: end;
+    margin-left: 85%;
+    margin-right: 5px;
+    margin-top: -35px;
+    position: relative;
+    z-index: 2;
+    color: black;
+}
 @media screen and (max-width: 820px) {
     .container{
     margin: auto;
@@ -70,6 +81,10 @@ button:hover{
 
 }
 @media screen and (max-width: 440px) {
+    body{
+        background-image: none;
+        background-color:lightblue;
+    }
     .container{
         margin: auto;
         width: 300px;
