--- a/src/app/registration/register/register.component.css
+++ b/src/app/registration/register/register.component.css
@@ -5,7 +5,7 @@ body {
     background-color: white;
     color: white;
     padding-top: 6vh;
-    padding-bottom: 5vh;
+    padding-bottom: 6vh;
     background-image: url("https://t3.ftcdn.net/jpg/02/55/67/62/360_F_255676210_fiOrmx7LosKnQrtNrWPllUrunUkqTuCy.jpg");
     background-color: black;
     background-repeat:no-repeat;
@@ -74,12 +74,25 @@ p {
     background-color:salmon;
     border: 2px solid crimson !important;
 }
+span{
+    text-align: end;
+    margin-left: 85%;
+    margin-right: 5px;
+    margin-top: -35px;
+    position: relative;
+    z-index: 2;
+    color: black;
+}
 @media screen and (max-width: 820px) {
     .container{
     margin: auto;
     }
 }
 @media screen and (max-width: 440px) {
+    body{
+        background-image: none;
+        background-color: lightblue;
+    }
     .container{
         margin: auto;
         width: 300px;
