--- a/src/app/reservation/reservation.component.css
+++ b/src/app/reservation/reservation.component.css
@@ -61,7 +61,62 @@ p {
     text-align: center;
     display: none;
 } */
+.container-fluid{
+  display: none;
+}
+table {
+  border: 1px solid;
+  margin: auto;
+  width: 80% !important;
+  height: 70% !important;
+}
 
+.seat-select {
+  cursor: pointer;
+  /* background: #FFFFFF; */
+  border: 1px solid black;
+  background: rgb(226, 224, 224);
+  border-radius: 10px / 30px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  color: grey;
+}
+.seat-select:hover{
+  background-color:lightcoral;
+}
+.seat-selected {
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: lightcoral;
+  /* background: #6200EE; */
+  color: black;
+  border-radius: 10px / 30px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+}
+
+.seat-disabled {
+  cursor: not-allowed;
+  border: 1px solid black;
+  background-color:gray;
+  /* background: brown; */
+  color: white;
+  border-radius: 10px / 30px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+}
+.seat-disabled:hover {
+  background-color:gray;
+}
+#submitButton {
+  display: block;
+  margin: auto;
+  margin-top: 5px;
+  font-size: 21px;
+}
 #price{
   float:right;margin-right: 2%;
 }
@@ -69,9 +124,10 @@ h1{
     text-align: center;
 }
 body {
+  border: 2px solid black;
     background:lightgray;
-    padding-top: 20vh;
-    padding-bottom: 35vh;
+    padding-top: 23vh;
+    padding-bottom: 38vh;
 
   }
   
@@ -107,6 +163,7 @@ body {
     border-radius: 7px;
   }
   .cinema-seats .seat.blocked:before {
+    cursor:not-allowed;
     content: "";
     position: absolute;
     top: 0;
@@ -223,7 +280,6 @@ body {
   }
 
   #book{
-      margin-left: 48%;
       margin-bottom: 1%;
     display: inline-block;
     outline: none;
@@ -242,7 +298,20 @@ body {
       background:orangered;
   }
     
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
+  body {
+    background:lightgray;
+    padding-top: 0vh;
+    padding-bottom: 0vh;
+
+  }
+  .container-fluid{
+    display: block;
+    overflow: scroll;
+  }
+  .scroll{
+    display: none;
+  }
   #price{
     float:none;
   }
@@ -255,5 +324,8 @@ body {
   .left .seat{
     width: 32px;
     height: 50px;
+  }
+  #book{
+    margin: auto;
   }
 } 
